# Zeppelin-Battle-Simulation

./: .gitignore  Blimp.cpp  BoundingBox.cpp  Building.cpp  CMakeLists.txt  CMakePresets.json  Enemy.cpp  GroundMesh.cpp  Main.cpp  ObjectPositionHandler.cpp  ObjectTextureHandler.cpp  QuadMesh.cpp  README.md  Raytrace.cpp  Transformations.cpp  Util.cpp  WindowHandler.cpp  Zeppelin-Battle-Simulation.sln
Zeppelin-Battle-Simulation/: Zeppelin-Battle-Simulation.vcxproj  Zeppelin-Battle-Simulation.vcxproj.filters
header/: Blimp.h  BoundingBox.h  Building.h  Enemy.h  GroundMesh.h  ObjectPositionHandler.h  ObjectTextureHandler.h  QuadMesh.h  RayTrace.h  Transformations.h  Util.h  VECTOR3D.h  WindowHandler.h
src/: Blimp.cpp  BoundingBox.cpp  Building.cpp  Enemy.cpp  GroundMesh.cpp  Main.cpp  ObjectPositionHandler.cpp  ObjectTextureHandler.cpp  QuadMesh.cpp  Raytrace.cpp  Transformations.cpp  Util.cpp  WindowHandler.cpp
